--- a/k210/mdepx.conf
+++ b/k210/mdepx.conf
@@ -27,9 +27,9 @@ mdepx {
 		modules riscv;
 
 		riscv {
-			modules kendryte;
+			modules riscv kendryte;
 
-			objects sifive/e300g_clint.o;
+			objects riscv/clint.o riscv/clint_timer.o riscv/clint_intr.o;
 
 			fpe;
 
